Removed code in PropertySetter that won't run on Android from core and replaced it with a new implementation (an Android-friendly one, hopefully). Added test code for the PropertySetter (in particular the failure cases). Updated the build scripts to not output a silly Ant runtime warning.

--- a/timingframework-core/lib/release.properties
+++ b/timingframework-core/lib/release.properties
@@ -1,3 +1,8 @@
 # The numeric version of the (next) Timing Framework release
 # (note that this number needs to be updated in the java-overview.html file)
-release-version=4.1
+release-version=5.0
+
+# The location of the promises source code on your disk (an absolute path)
+# (note that this is the project location with src/main/java added)
+# (note that Windows paths need '\\' not just '\')
+promises-src=C:\\Users\\Tim\\Source\\eclipse-3.7\\workspace-android\\git\\promises\\promises\\src\\main\\java
