Working to get Too Many Balls! demo running on Android -- it does a bit.

--- a/timingframework-android/AndroidManifest.xml
+++ b/timingframework-android/AndroidManifest.xml
@@ -23,6 +23,10 @@
             android:label="@string/demo_tsr" >
         </activity>
         <activity
+            android:name=".RaceBasic"
+            android:label="@string/demo_race_b" >
+        </activity>
+        <activity
             android:name=".TooManyBalls"
             android:label="@string/demo_tmb" >
         </activity>
