--- a/timingframework-core/lib/release.properties
+++ b/timingframework-core/lib/release.properties
@@ -5,4 +5,4 @@ release-version=5.1
 # The location of the promises source code on your disk (an absolute path)
 # (note that this is the project location with src/main/java added)
 # (note that Windows paths need '\\' not just '\')
-promises-src=C:\\Users\\Tim\\Source\\eclipse-3.7\\workspace-android\\git\\promises\\promises\\src\\main\\java
+promises-src=C:\\Users\\Tim\\Source\\eclipse-work\\git\\promises\\promises\\src\\main\\java
