--- a/timingframework-core/pom.xml
+++ b/timingframework-core/pom.xml
@@ -6,11 +6,11 @@
         <version>9</version>
     </parent>
 
-    <groupId>net.java.timingframework</groupId>
+    <groupId>org.bidib.net.java.timingframework</groupId>
     <artifactId>timingframework-core</artifactId>
     <packaging>jar</packaging>
     <name>Timing Framework - Core</name>
-    <version>7.4.1</version>
+    <version>7.4.1-SNAPSHOT</version>
     <description>
     This project provides a framework and sample code for time-based animations.
     </description>
