--- a/timingframework-swing/pom.xml
+++ b/timingframework-swing/pom.xml
@@ -6,11 +6,11 @@
         <version>9</version>
     </parent>
 
-    <groupId>net.java.timingframework</groupId>
+    <groupId>org.bidib.net.java.timingframework</groupId>
     <artifactId>timingframework-swing</artifactId>
     <packaging>jar</packaging>
     <name>Timing Framework - Swing</name>
-    <version>7.4.1</version>
+    <version>7.4.1-SNAPSHOT</version>
     <description>
     This project provides a framework and sample code for time-based animations in Swing.
     </description>
@@ -65,14 +65,14 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>net.java.timingframework</groupId>
+            <groupId>org.bidib.net.java.timingframework</groupId>
             <artifactId>timingframework-core</artifactId>
-            <version>7.4.1</version>
+            <version>7.4.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>net.java.timingframework</groupId>
+            <groupId>org.bidib.net.java.timingframework</groupId>
             <artifactId>timingframework-core</artifactId>
-            <version>7.4.1</version>
+            <version>7.4.1-SNAPSHOT</version>
             <classifier>tests</classifier>
             <scope>test</scope>
         </dependency>
