--- a/timingframework-core/pom.xml
+++ b/timingframework-core/pom.xml
@@ -3,14 +3,14 @@
     <parent>
         <groupId>org.bidib.net.java.timingframework</groupId>
         <artifactId>timingframework</artifactId>
-        <version>7.4.1-SNAPSHOT</version>
+        <version>7.4.1</version>
     </parent>
 
     <groupId>org.bidib.net.java.timingframework</groupId>
     <artifactId>timingframework-core</artifactId>
     <packaging>jar</packaging>
     <name>Timing Framework - Core</name>
-    <version>7.4.1-SNAPSHOT</version>
+    <version>7.4.1</version>
     <description>
     This project provides a framework and sample code for time-based animations.
     </description>
@@ -63,15 +63,6 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <showDeprecation>true</showDeprecation>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <executions>
                     <execution>
@@ -88,6 +79,7 @@
                     <execution>
                         <goals>
                             <goal>jar</goal>
+                            <goal>test-jar</goal>
                         </goals>
                     </execution>
                 </executions>
